# TuberNotes

./: .gitignore  AGENTS.md  LISCENSE.md  README.md  SPEC.md
DeveloperTools/: connect-feedback-codex.sh  device-preflight.sh  device-recover.sh  device_session.py  pc18-evaluate.py  reset-feedback-state.sh  review-session.py  verify-scenario.sh
DeveloperTools/AgentKnowledgeTests/: PC25CorpusMain.swift  PC26LiveSearchMain.swift  PC27GroundedCitationMain.swift  PC28CitationNavigationMain.swift  main.swift
DeveloperTools/CodexAdapterTests/: main.swift  run-checks.sh
DeveloperTools/OpenCodeAuthReproduction/: COMPATIBILITY.md  EVIDENCE.md  README.md  opencode_auth_reproduction.py  run-checks.sh  scan_secrets.py
DeveloperTools/PC18ContractTests/: main.swift  run-checks.sh
DeveloperTools/PencilFixtureMCP/: README.md  codex_wake_bridge.py  pyproject.toml  server.py
DeveloperTools/PencilFixtureMCP/Fixtures/: draw-a-short-loop-first-make-a-deli-5095ed96247c.json
DeveloperTools/PencilFixtureMCP/tests/: test_codex_wake_bridge.py  test_device_session_target.py  test_feedback_threads.py  test_queue.py  test_review_harness_ui.py
DeveloperTools/ReviewSessions/: m0-v2-morning.json
DeveloperTools/pc18-fixtures/: generate_assets.py  manifest.json
DeveloperTools/tests/: test_agent_insight_content_contract.py  (+18 more)
Docs/: Development.md  DeviceWorkflow.md  FeedbackThreadsOvernightHandoff.md  FeedbackThreadsSpec.md  M0V2MorningHandoff.md  OpenCodeAuthReproductionHandoff.md
TuberNotes/: Config.xcconfig  Info.plist  Local.xcconfig.example
TuberNotes.xcodeproj/: project.pbxproj
(+118 files in other folders)
