[project]
name = "pencil-fixture-mcp"
version = "0.1.0"
description = "Small development-only MCP for recording and replaying authentic Apple Pencil fixtures in TuberNotes"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0,<2"]

[project.scripts]
pencil-fixture-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "codex_wake_bridge.py"]
